# xtd_uc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile_gtest  README.md  ci_tests.sh  compile_commands.json  design_guidelines.md  native_tests  update_compile_db.sh
include/xtd_uc/: adc.hpp  algorithm.hpp  avr.hpp  avr_if.hpp  bitfield.hpp  blink.hpp  bootstrap.hpp  chrono.hpp  chrono_noclock.hpp  cmath.hpp  common.hpp  common_type.hpp  cstdint.hpp  delay.hpp  eeprom.hpp  eeprom_cyclic_buffer.hpp  fake_avr.hpp  gpio.hpp  gpio2.hpp  i2c.hpp  istream.hpp  iterables.hpp  limits.hpp  numeric.hpp  ostream.hpp  queue.hpp  ratio.hpp  sched_fcfs.hpp  sleep.hpp  temp.hpp  tmpl.hpp  tuple.hpp  type_traits.hpp  uart.hpp  unit_impl.hpp  unit_literals.hpp  units.hpp  usb.hpp  usb_class.hpp  usb_description.hpp  (+6 more)
src/: adc_common.tpp  blink.cpp  bootstrap.cpp  chrono.cpp  delay.cpp  i2c_avr_cpp  main.cpp  sched_fcfs.cpp  sleep.cpp
src/atmega/: adc.cpp  bootstrap.cpp  chrono.cpp  gpio.cpp  i2c.cpp  main.cpp  sleep.cpp  uart.cpp  wdt.cpp
src/atmega8/: usb.cpp
src/attiny/: adc.cpp  i2c.cpp  test_.cpp
test/: #tuple.cpp#  chrono.cpp  cmath.cpp  fake_avr.cpp  i2c_attiny.cpp  limits.cpp  queue.cpp  ratio.cpp  readme.md  tmpl.cpp  tuple.cpp  type_traits.cpp  units.cpp  usb_descriptor.cpp  usb_integration.cpp  utility.cpp
